src/snapshots/afrotd__parser__tests__interpretation_html_10.2.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s erfolgreicher Fieldgoalversuch wird von der B-30 gesnappt
            und ein Team B-Spieler foult während des Kicks an der B-20 (kein
            persönliches Foul oder Unsportliches Verhalten Foul).
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A kann die Strafe ablehnen und die Punkte akzeptieren oder
                die Punkte ablehnen und Team B vom Previous Spot bestrafen
                lassen (Regel 10.2.5.d).
            </p>
        </details>
    </div>
</article>
