src/snapshots/afrotd__parser__tests__interpretation_html_10.2.5_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Touchdownlaufes clippt Team B im Spielfeld oder in
            der Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A hat die Option, die Strafe beim Try, dem anschließenden
                Kickoff oder vom Succeeding Spot in Extraperioden durchführen
                zu lassen. (Regel 10.2.5.a.1).
            </p>
        </details>
    </div>
</article>
