src/snapshots/afrotd__parser__tests__interpretation_html_10.2.5_11.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.XI
        </p>
    </div>
    <div class="message-body">
        <p>
            Team B foult während eines erfolgreichen Try.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wiederhole den Try nach der Strafdurchführung oder die Strafe
                wird durch die Regel aufgehoben. Strafen für Persönliche Fouls
                und unsportliche Verhalten-Fouls können beim anschließenden
                Kickoff oder vom Succeeding Spot in Extraperioden durchgeführt
                werden (Regel 8.3.3.b.1).
            </p>
        </details>
    </div>
</article>
