src/snapshots/afrotd__parser__tests__interpretation_html_10.2.5_12.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.XII
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines erfolgreichen Scrimmage Kick Try von der B3 ist Team
            B Offside. Nachdem der Ball dead ist, begeht Team B ein
            persönliches Foul.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wenn Team A wählt, den Try zu wiederholen, werden beide Strafen
                gegen Team B vor dem Snap durchgeführt (Regel 10.1.6). Wenn
                Team A die Offside-Strafe ablehnt und den Punkt akzeptiert,
                wird die Strafe für Team B’s Dead Ball Foul dann beim Kickoff
                oder vom Succeeding Spot in Extraperioden durchgeführt (Regel
                8.3.5).
            </p>
        </details>
    </div>
</article>
