src/snapshots/afrotd__parser__tests__interpretation_html_10.2.5_13.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.XIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines erfolglosen Kicks von der B-3 beim Try bewegt sich
            Team A illegal beim Snap. Nachdem der Ball dead ist, foult Team B.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B wird offensichtlich die Strafe für Team A’s Foul
                ablehnen. Team B wird beim Kickoff oder vom Succeeding Spot in
                Extraperioden bestraft. Fouls nach einem Try und vor dem
                anschließenden Kickoff:
            </p>
        </details>
    </div>
</article>
