src/snapshots/afrotd__parser__tests__interpretation_html_10.2.5_15.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.XV
        </p>
    </div>
    <div class="message-body">
        <p>
            Beide Teams foulen bevor eines der beiden Fouls vervollständigt
            ist.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Fouls gleichen sich aus.
            </p>
        </details>
    </div>
</article>
