src/snapshots/afrotd__parser__tests__interpretation_html_10.2.5_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.2.5.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A foult, nachdem es einen Touchdown erzielt hat, und Team B
            foult beim erfolgreichen Try.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Touchdown gilt. Team B hat die Wahl, die Strafe für Team
                A’s Foul beim Try, dem anschließenden Kickoff oder vom
                Succeeding Spot in Extraperioden durchführen zu lassen. Team A
                hat dann die Wahl, Team B bei der Wiederholung des Try
                bestrafen zu lassen. Persönliche Fouls von Team B können beim
                anschließenden Kickoff oder vom Succeeding Spot in
                Extraperioden geahndet werden. Die Distanzen der Meterstrafen
                beim folgenden Kickoff können sich ausgleichen.
            </p>
        </details>
    </div>
</article>
