src/snapshots/afrotd__parser__tests__interpretation_html_2.12.5_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.12.5.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Free Kick durchbricht die Fläche von der B-Restraining Line.
            Während sich der Ball in der Luft befindet, berührt A1, der sich
            hinter Team B’s Restraining Line befindet, den Ball.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Legales Berühren (Regel 6.1.3.b).
            </p>
        </details>
    </div>
</article>
