src/snapshots/afrotd__parser__tests__interpretation_html_2.16.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 2.16.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim Free Kick zu Beginn eines Spieles benutzt der Kicker die
            Schuhspitze eines Mitspielers oder bildet aus Gras oder Erde ein
            provisorisches Kicking Tee, um den Ball vor dem Kick darauf zu
            platzieren.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Illegaler Kick. Dead Ball Foul. Strafe – 5 Meter vom Succeeding
                Spot.
            </p>
        </details>
    </div>
</article>
